# tramando

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  DOCKER.md  Dockerfile  E2E-ROADMAP.md  LICENSE  README.md  TESTING.md  UI-MOCKUP.html  deps.edn  docker-compose.yml  docker-entrypoint.sh  package-lock.json  package.json  playwright.config.js  shadow-cljs.edn
.github/workflows/: build.yml
docs/: SCREENSHOT_CHECKLIST.md  genera_manuale.py  index.html  index_en.html  tramando-promo-slides.html
docs/video/: Scena_1.key  sceneggiatura.md
e2e/: annotations.spec.js  auth.spec.js  basic-flow.spec.js  chat.spec.js  collab-advanced.spec.js  discussions.spec.js  editing.spec.js  global-setup.mjs  global-teardown.mjs  modals.spec.js  proposals.spec.js  server-mode.spec.js  structure.spec.js  undo-redo.spec.js
e2e/fixtures/: setup-test-db.clj  test-tramando.db
esempi/: Un giorno da Leone (1).trmd  Un giorno da Leone.trmd  Un giorno da Leone_2.trmd  il_treno_ha_fischiato.trmd  la_carta_che_resta.trmd  prova1.md  prova2.md  racconto di Claude.md  racconto di Claude.md.rtf  the_paper_that_remains.trmd  un giorno da Leone.md
public/: index.html
server/: .gitignore  Dockerfile  README.md  deps.edn  start-server.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/tramando/: ai_panel.cljs  annotations.cljs  api.cljs  auth.cljs  chat.cljs  chunk_selector.cljs  context_menu.cljs  core.cljs  editor.cljs  events.cljs  export_common.cljs  export_docx.cljs  export_pdf.cljs  (+12 more)
stili/: default.edn
(+913 files in other folders)
