[package]
name = "tramando"
version = "1.2.0"
description = "Tessi la tua storia"
authors = ["Vincenzo"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "tramando_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
